# napari-plugin-template

./: .gitignore  .pre-commit-config.yaml  PROMPTS.md  README.md  _tasks.py  copier.yaml  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.github/: dependabot.yml
.github/ISSSUE_TEMPLATE/: bug_report.yml
.github/ISSUE_TEMPLATE/: documentation.md  feature_request.md
.github/workflows/: test.yml
template/: .gitignore  README.md.jinja  pyproject.toml.jinja  setup.cfg.jinja  tox.ini.jinja  {% if install_precommit %}.pre-commit-config.yaml{% endif %}.jinja
template/.github/: TEST_FAIL_TEMPLATE.md.jinja  {% if install_dependabot %}dependabot.yml{% endif %}.jinja
template/.github/ISSUE_TEMPLATE/: bug_report.yml.jinja  documentation.md.jinja  feature_request.md.jinja
template/.github/workflows/: make_release.yml  reusable_run_tox_test.yml  test_and_deploy.yml  test_and_deploy.yml.jinja  test_comprehensive.yml  test_prereleases.yml
template/src/{{module_name}}/: __init__.py.jinja  napari.yaml.jinja  {% if include_reader_plugin %}_reader.py{% endif %}.jinja  {% if include_sample_data_plugin %}_sample_data.py{% endif %}.jinja  {% if include_widget_plugin %}_qt_binding_check.py{% endif %}.jinja  {% if include_widget_plugin %}_widget.py{% endif %}.jinja  {% if include_writer_plugin %}_writer.py{% endif %}.jinja
template/src/{{module_name}}/_tests/: {% if include_widget_plugin %}test_widget.py{% endif %}.jinja
template/tests/: {% if include_reader_plugin %}test_reader.py{% endif %}.jinja  {% if include_widget_plugin %}test_widget.py{% endif %}.jinja
tests/: test_create_template.py
