[project]
name = "napari-plugin-template"
version = "0.0.0"
description = "Development metadata for testing the napari plugin copier template"
requires-python = ">=3.10"
dependencies = [
    "copier",
    "jinja2-time",
    "npe2>=0.8.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=8",
    "pytest-copie",
    "tox>=4.25",
    "tox-uv>=1",
]

[tool.tox]
requires = ["tox>=4.25", "tox-uv>=1"]
env_list = ["py310", "py311", "py312", "py313", "py314"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
description = "Tests with {base_python}"
package = "skip"
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
norecursedirs = ["{{plugin_name}}", ".git", ".pixi", ".venv"]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
